--- a/bio1.html
+++ b/bio1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> (١ مايو / ٢٣ برمودة) القديس العظيم الشهيد مارجرجس الروماني <br> The great Martyr Saint George (1 May / 23 Bramouda)</title>
+  <title> El Fayoum Martyrs </title>
   <style>
     body {
       font-family: Arial, sans-serif;
