--- a/bio3.html
+++ b/bio3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> القديس الشهيد ابانوب النهيسى   <br>  Saint Abanob EL Nehisy </title>
+  <title> The Martyred Children of Bethlehem </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> القديس الشهيد ابانوب النهيسى <br> (٣١ يوليو / ٢٤ أبيب) <br>  Saint Abanob EL Nehisy <br> (31 July / 24 Abib) </h1>
+   <h1> (١٢ يناير / ٣ طوبة) <br> أطفال بيت لحم الشهداء <br>  The Martyred Children of Bethlehem <br> (12 Jan / 3 Tuba) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/StAbanoub.jpg" alt="St Abanoub">
    
 <p style="text-align: left; font-size: 18px;">
