--- a/bio5.html
+++ b/bio5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>القديس الشهيد صليب الجديد  <br> Martyrom of St. Bestavros the New</title>
+  <title> Saint Tadros El Shatby </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> القديس الشهيد صليب الجديد <br> (١٣ ديسمبر / ٣ كيهك) <br> Martyrom of St. Bestavros <br> (13 Dec./ 3 Kiahk)</h1>
+   <h1> (٢٧ يوليو / ٢٠ أبيب) <br> القديس الشهيد تادرس الشطبى  <br> Saint Tadros El Shatby <br> (27 Jul / 20 Abib) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/NewSalib.jpg" alt="New Salib">
    <p style="text-align: left; font-size: 18px;">
 He lived during the time of Pope Yoannis XIII. He was born in the town of Hour, in the Mallawi district of Minya Governorate. His parents were God-fearing and raised him with true spiritual upbringing. They knew how to deeply instill the faith within him so firmly that he would never accept anything in its place.
