--- a/bio6.html
+++ b/bio6.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>الشهداء القديسين اولاد الانبا توماس  <br>  Children of St Tomas</title>
+  <title> Saint Boktor Ben Romance </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>الشهداء القديسين اولاد الانبا توماس <br> (٤ يونيو / ٢٧ بشنس) <br>  Children of St Tomas <br> (4 June/ 27 Bashance)</h1>
+   <h1> (٥ مايو / ٢٧ برمودة) <br> القديس الشهيد بقطر بن رومانس  <br>  Saint Boktor Ben Romance <br> (5 May / 27 Bramouda) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/TomasSons.jpg" alt="Tomas Sons">
     <p style="text-align: left; font-size: 18px;">
 Anba Wissa (a disciple of Anba Shenouda the Archimandrite) said:
