--- a/bio7.html
+++ b/bio7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>الثلاث فلاحين شهداء اسنا <br> The Three Martyred Farmers of Esna</title>
+  <title> Saints Cosmas and Damian </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,9 +35,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>الثلاث فلاحين شهداء اسنا <br> (٢٢ سبتمبر / ١١ توت) <br> The Three Martyred Farmers of Esna <br> (22 September / 11 tout)</h1>
+   <h1> (٢ ديسمبر / ٢٢ هاتور) <br> القديسان الشهيدان كوزمان ودميان <br> Saints Cosmas and Damian <br> (2 Dec / 22 Hatoor) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/ThreeBrothers.jpg" alt="Three Brothers">
-    <p style="text-align: left; font-size: 18px;">
   <p style="text-align: left; font-size: 18px;">
 They were farmers from Esna, whom Arianus the governor met during his fourth visit to the city. This was after the massacre he carried out in Esna, in which the entire city was martyred, as will be detailed in the section titled "The Martyrs of Esna" on the St-Takla.org website.
 These farmers were walking on the city bridge, carrying their axes, and they shouted in a loud voice:
