--- a/bio8.html
+++ b/bio8.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>القديس العظيم البابا أثناسيوس الرسولي <br> Saint Athanasius of Alexandria</title>
+  <title> Father Mina Aboud </title>
   <style>
     body {
       font-family: Arial, sans-serif;
