--- a/bio8.html
+++ b/bio8.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>القديس العظيم البابا أثناسيوس الرسولي <br> (١٥ مايو / ٧ بشنس) <br> Saint Athanasius of Alexandria <br> (15 May / 7 Bashance)</h1>
+   <h1> (٦ يوليو / ٢٩ بؤونه) <br> القديس الشهيد أبونا مينا عبود <br> Father Mina Aboud <br> (6 Jul / 29 Baouna) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/StAthanasius.jpg" alt="St Athanasius">
     <p style="text-align: left; font-size: 18px;">
 <strong>His Early Life:</strong>
