--- a/bio10.html
+++ b/bio10.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>طفل شهيد من أخميم <br> Child Martyr of Akhmeem</title>
+  <title> Martyr Mother Dolagy and her Children </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>طفل شهيد من أخميم (٢٩، ٣٠ كيهك - ١ طوبة / ٨، ٩، ١٠ يناير) <br> Child Martyr of Akhmeem (29,30 Kiahk - 1 Tuba / 8,9,10 Jan) </h1>
+   <h1> (١٤ مايو / ٦ بشنس) <br> أم دولاجى وأولادها الشهداء <br> Martyr Mother Dolagy and her Children <br> (14 May/ 6 Bashance) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/AkhmimKid.jpg" alt="Akhmim Kid">
    <p style="text-align: left; font-size: 18px;">
 At dawn on the 29th of Kiahk, 303 A.D., the vast Church of Soter (the Savior) was packed with crowds of Christian worshippers who had spent the previous night in hymns and prayers in preparation for the Christmas liturgy, which began in the third watch of the night.
