--- a/bio11.html
+++ b/bio11.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>القديس أبونا فانوس الأنبا بولا <br> Saint Abouna Fanoos – Anba Paula</title>
+  <title> Saint Simon the Tanner </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>القديس أبونا فانوس الأنبا بولا <br> (١٩ أبريل / ١١ برمودة) <br> Saint Abouna Fanoos – Anba Paula <br> (19 April/11 Bramouda)</h1>
+   <h1> (١٠ أغسطس / ٤ مسرى) <br> القديسة السائحة آنا سيمون <br> St. Ana Simon the Hermit <br> (10 Aug / 4 Mesra) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/FrFanous.jpg" alt="Fr Fanous">
     <p style="text-align: left; font-size: 18px;">
 The life of the holy monk Archpriest Fanous El-Anba Bola will forever remain a shining lamp and a luminous beacon—an exemplary model of what a humble ascetic monk should be, concerned with nothing but the salvation of his soul and the souls of all who encounter his deep love.
