--- a/bio11.html
+++ b/bio11.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Saint Simon the Tanner </title>
+  <title> St. Ana Simon the Hermit </title>
   <style>
     body {
       font-family: Arial, sans-serif;
