--- a/bio12.html
+++ b/bio12.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>زكا العشار <br> Zacchaeus the Tax Collector</title>
+  <title> Saint Simon the Tanner </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>زكا العشار <br> (٢٠ أبريل / ١٢ برمودة) <br> Zacchaeus the Tax Collector <br> (20 April / 12 Bramouda)</h1>
+   <h1> (٢٨ نوفمبر / ١٨ هاتور) <br> القديس سمعان الخراز <br> Saint Simon the Tanner <br> (28 Nov / 18 Hatoor) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/Zaka.jpg" alt="Zaka">
     <!-- Zacchaeus the Tax Collector -->
 <p style="text-align: left; font-size: 18px;">
