--- a/bio13.html
+++ b/bio13.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> القديس الأنبا بيسنتاؤس اللابس الروح <br> St. Besintaos the Soul Bearer </title>
+  <title> Saint Afrosina </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> القديس الأنبا بيسنتاؤس اللابس الروح <br> (٢٠ يوليو / ١٣ أبيب) <br> St. Besintaos the Soul Bearer <br> (20 July / 13 Abib)</h1>
+   <h1> (١٧ فبراير / ٩ أمشير) <br> القديسة أفروسينا <br> Saint Afrosina <br> (17 Feb / 9 Amshir) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/main/Images/StBesintaos.jpg" alt="St Besintaos">
     <p style="text-align: left; font-size: 18px;">
 <strong> His monasticism:  </strong>
