--- a/bio3.html
+++ b/bio3.html
@@ -36,7 +36,7 @@
 <body>
   <div class="container">
    <h1> (١٢ يناير / ٣ طوبة) <br> أطفال بيت لحم الشهداء <br>  The Martyred Children of Bethlehem <br> (12 Jan / 3 Tuba) </h1>
-<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/StAbanoub.jpg" alt="St Abanoub">
+<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/Bethlehem.jpg" alt="Bethlehem">
    
 <p style="text-align: left; font-size: 18px;">
 The word "Abanoub" is derived from "Panoub", meaning "gold".  
