--- a/bio4.html
+++ b/bio4.html
@@ -36,7 +36,7 @@
 <body>
   <div class="container">
    <h1> (١٤ مايو / ٦ بشنس) <br> القديس الشهيد إسحق الدفراوى  <br> Saint Eshak El-Dafrawy <br> (14 May/ 6 Bashance)</h1>
-<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/Akhmim.jpg" alt="Akhmim">
+<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Dafrawi.jpg" alt="Dafrawi">
     <p style="text-align: left; font-size: 18px;">
 At dawn on the 29th of Kiahk, 303 A.D., the vast Church of Soter (the Savior) was packed with crowds of Christian worshippers who had spent the previous night in hymns and prayers in preparation for the Christmas liturgy, which began in the third watch of the night.
 Their beloved shepherd, Bishop of Akhmim, Anba Odogius, was not with them that feast, as he had recently departed. News had reached them about the arrival of the fierce governor "Arianus," the governor of Ansena, along with his soldiers to their city. So, secretly, Anba Abadion (who had previously been arrested) came to pray with them.
