--- a/bio6.html
+++ b/bio6.html
@@ -36,7 +36,7 @@
 <body>
   <div class="container">
    <h1> (٥ مايو / ٢٧ برمودة) <br> القديس الشهيد بقطر بن رومانس  <br>  Saint Boktor Ben Romance <br> (5 May / 27 Bramouda) </h1>
-<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/TomasSons.jpg" alt="Tomas Sons">
+<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Romance.jpg" alt="Romance">
     <p style="text-align: left; font-size: 18px;">
 Anba Wissa (a disciple of Anba Shenouda the Archimandrite) said:
 "There was a pious hermit in Shanshif named 'Thomas.' My father (Anba Shenouda) said about him that there was no one like him, and that our Lord Jesus Christ spoke with him, and angels visited him many times.
