--- a/bio8.html
+++ b/bio8.html
@@ -36,7 +36,7 @@
 <body>
   <div class="container">
    <h1> (٢٦ يونيو / ١٩ بؤونه) <br> القديس الشهيد مارجرجس المزاحم <br> Saint George El-Mozahema <br> (26 Jun / 19 Baouna)</h1>
-<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio/99f12bf573fead44b14e519164da88540667924b/Images/StAugustinos.jpg" alt="St Augustinos">
+<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Mozahem.jpg" alt="Mozahem">
     <p style="text-align: left; font-size: 18px;">
 <strong> From Tagaste to Carthage:  </strong> 
 <br>
