--- a/bio1.html
+++ b/bio1.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1>  (٨ يناير / ٢٩ كيهك) <br> شهداء الفيوم  <br>  El Fayoum Martyrs <br> (8 Jan / 29 Kiahk) </h1>
+   <h1>   شهداء الفيوم  </h1>
+    <h1>  (٨ يناير / ٢٩ كيهك)  </h1>
+    <h1>   El Fayoum Martyrs </h1>
+    <h1>   (8 Jan / 29 Kiahk) </h1>
     <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Fayoum.jpg" alt="Fayoum">
     <p style="text-align: left; font-size: 18px;">	
 <strong>St. George the Roman</strong> is often seen as the prince of martyrs during the reign of Emperor Diocletian, as he led a revolutionary movement in Cappadocia against the decree of Christian persecution. However, most Coptic manuscripts suggest he lived earlier, during the reign of an illegitimate king named Dadianus the Persian, a pagan ruler. That’s why the biography of St. George the Alexandrian mentions that he was martyred during Diocletian's era, although he was born as a result of the intercession of the earlier Saint George. Some manuscripts simply say "in the olden days," likely referring to a time before Diocletian.
