--- a/bio3.html
+++ b/bio3.html
@@ -35,7 +35,11 @@
 </head>
 <body>
   <div class="container">
-   <h1> (١٢ يناير / ٣ طوبة) <br> أطفال بيت لحم الشهداء <br>  The Martyred Children of Bethlehem <br> (12 Jan / 3 Tuba) </h1>
+   <h1> أطفال بيت لحم الشهداء  </h1>
+   <h1> (١٢ يناير / ٣ طوبة)  </h1>
+   <h1> The Martyred Children of Bethlehem  </h1>
+   <h1> (12 Jan / 3 Tuba) </h1>
+
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Bethlehem.jpg" alt="Bethlehem">
    
 <p style="text-align: left; font-size: 18px;">
