--- a/bio4.html
+++ b/bio4.html
@@ -35,7 +35,11 @@
 </head>
 <body>
   <div class="container">
-   <h1> (١٤ مايو / ٦ بشنس) <br> القديس الشهيد إسحق الدفراوى  <br> Saint Eshak El-Dafrawy <br> (14 May/ 6 Bashance)</h1>
+   <h1> القديس الشهيد إسحق الدفراوى </h1>
+   <h1> (١٤ مايو / ٦ بشنس) </h1>
+   <h1>  Saint Eshak El-Dafrawy </h1>
+   <h1> (14 May/ 6 Bashance)</h1>
+ 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Dafrawi.jpg" alt="Dafrawi">
     <p style="text-align: left; font-size: 18px;">
 At dawn on the 29th of Kiahk, 303 A.D., the vast Church of Soter (the Savior) was packed with crowds of Christian worshippers who had spent the previous night in hymns and prayers in preparation for the Christmas liturgy, which began in the third watch of the night.
