--- a/bio5.html
+++ b/bio5.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (٢٧ يوليو / ٢٠ أبيب) <br> القديس الشهيد تادرس الشطبى  <br> Saint Tadros El Shatby <br> (27 Jul / 20 Abib) </h1>
+   <h1> القديس الشهيد تادرس الشطبى  </h1>
+    <h1> (٢٧ يوليو / ٢٠ أبيب)  </h1>
+    <h1>  Saint Tadros El Shatby  </h1>
+    <h1>  (27 Jul / 20 Abib) </h1>
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Tadros.jpg" alt="Tadros">
    <p style="text-align: left; font-size: 18px;">
 He lived during the time of Pope Yoannis XIII. He was born in the town of Hour, in the Mallawi district of Minya Governorate. His parents were God-fearing and raised him with true spiritual upbringing. They knew how to deeply instill the faith within him so firmly that he would never accept anything in its place.
