--- a/bio6.html
+++ b/bio6.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (٥ مايو / ٢٧ برمودة) <br> القديس الشهيد بقطر بن رومانس  <br>  Saint Boktor Ben Romance <br> (5 May / 27 Bramouda) </h1>
+   <h1>  القديس الشهيد بقطر بن رومانس  </h1>
+   <h1> (٥ مايو / ٢٧ برمودة)  </h1>
+   <h1>  Saint Boktor Ben Romance </h1>
+   <h1> (5 May / 27 Bramouda) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Romance.jpg" alt="Romance">
     <p style="text-align: left; font-size: 18px;">
 Anba Wissa (a disciple of Anba Shenouda the Archimandrite) said:
