--- a/bio7.html
+++ b/bio7.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (٢ ديسمبر / ٢٢ هاتور) <br> القديسان الشهيدان كوزمان ودميان <br> Saints Cosmas and Damian <br> (2 Dec / 22 Hatoor) </h1>
+   <h1> القديسان الشهيدان كوزمان ودميان  </h1>
+   <h1> (٢ ديسمبر / ٢٢ هاتور) </h1>
+   <h1> Saints Cosmas and Damian</h1>
+   <h1> (2 Dec / 22 Hatoor) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Kozman.jpg" alt="Kozman">
   <p style="text-align: left; font-size: 18px;">
 They were farmers from Esna, whom Arianus the governor met during his fourth visit to the city. This was after the massacre he carried out in Esna, in which the entire city was martyred, as will be detailed in the section titled "The Martyrs of Esna" on the St-Takla.org website.
