--- a/bio8.html
+++ b/bio8.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (٢٦ يونيو / ١٩ بؤونه) <br> القديس الشهيد مارجرجس المزاحم <br> Saint George El-Mozahema <br> (26 Jun / 19 Baouna)</h1>
+      <h1> القديس الشهيد مارجرجس المزاحم </h1>
+    <h1> (٢٦ يونيو / ١٩ بؤونه)</h1>
+   <h1>  Saint George El-Mozahema</h1>
+   <h1> (26 Jun / 19 Baouna)</h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Mozahem.jpg" alt="Mozahem">
     <p style="text-align: left; font-size: 18px;">
 <strong> From Tagaste to Carthage:  </strong> 
