--- a/bio9.html
+++ b/bio9.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (٦ يوليو / ٢٩ بؤونه) <br> القديس الشهيد أبونا مينا عبود <br> Father Mina Aboud <br> (6 Jul / 29 Baouna) </h1>
+   <h1> القديس الشهيد أبونا مينا عبود  </h1>
+   <h1> (٦ يوليو / ٢٩ بؤونه)  </h1>
+   <h1> Father Mina Aboud </h1>
+   <h1> (6 Jul / 29 Baouna) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Abod.jpg" alt="Abod">
     <p style="text-align: left; font-size: 18px;">
 <strong>His Early Life:</strong>
