--- a/bio10.html
+++ b/bio10.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (١٨ سبتمبر / ٧ توت) <br> القديسة الشهيدة رفقة وأولادها الخمسة <br> Saint Refka and her Five Children <br> (18 Sept / 7 Tout) </h1>
+   <h1>  القديسة الشهيدة رفقة وأولادها الخمسة  </h1>
+   <h1> (١٨ سبتمبر / ٧ توت)  </h1>
+   <h1> Saint Refka and her Five Children </h1>
+   <h1>  (18 Sept / 7 Tout) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Refka.png" alt="Refka">
     
 <p style="text-align: left; font-size: 18px;">
