--- a/bio11.html
+++ b/bio11.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (١٤ مايو / ٦ بشنس) <br> أم دولاجى وأولادها الشهداء <br> Martyr Mother Dolagy and her Children <br> (14 May/ 6 Bashance) </h1>
+   <h1>  الأم دولاجى وأولادها الشهداء  </h1>
+   <h1> (١٤ مايو / ٦ بشنس) </h1>
+   <h1>  Martyr Mother Dolagy and her Children  </h1>
+   <h1> (14 May/ 6 Bashance) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Dolagi.jpg" alt="Dolagi">
    <p style="text-align: left; font-size: 18px;">
 At dawn on the 29th of Kiahk, 303 A.D., the vast Church of Soter (the Savior) was packed with crowds of Christian worshippers who had spent the previous night in hymns and prayers in preparation for the Christmas liturgy, which began in the third watch of the night.
