--- a/bio14.html
+++ b/bio14.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (١٧ فبراير / ٩ أمشير) <br> القديسة أفروسينا <br> Saint Afrosina <br> (17 Feb / 9 Amshir) </h1>
+   <h1> القديسة أفروسينا  </h1>
+   <h1> (١٧ فبراير / ٩ أمشير) </h1>
+   <h1>  Saint Afrosina </h1>
+   <h1> (17 Feb / 9 Amshir) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Afro.jpg" alt="Afro">
     <p style="text-align: left; font-size: 18px;">
 <strong> His monasticism:  </strong>
