--- a/bio13.html
+++ b/bio13.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (٢٨ نوفمبر / ١٨ هاتور) <br> القديس سمعان الخراز <br> Saint Simon the Tanner <br> (28 Nov / 18 Hatoor) </h1>
+   <h1>  القديس سمعان الخراز  </h1>
+   <h1> (٢٨ نوفمبر / ١٨ هاتور) </h1>
+   <h1> Saint Simon the Tanner </h1>
+   <h1> (28 Nov / 18 Hatoor) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Simon.jpg" alt="Zaka">
     <!-- Zacchaeus the Tax Collector -->
 <p style="text-align: left; font-size: 18px;">
