--- a/bio12.html
+++ b/bio12.html
@@ -35,7 +35,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> (١٠ أغسطس / ٤ مسرى) <br> القديسة السائحة آنا سيمون <br> St. Ana Simon the Hermit <br> (10 Aug / 4 Mesra) </h1>
+   <h1> (١٠ أغسطس / ٤ مسرى) </h1>
+   <h1>  القديسة السائحة آنا سيمون  </h1>
+   <h1> St. Ana Simon the Hermit </h1>
+   <h1> (10 Aug / 4 Mesra) </h1> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Simona.jpg" alt="Simona">
     <p style="text-align: left; font-size: 18px;">
 The life of the holy monk Archpriest Fanous El-Anba Bola will forever remain a shining lamp and a luminous beacon—an exemplary model of what a humble ascetic monk should be, concerned with nothing but the salvation of his soul and the souls of all who encounter his deep love.
