--- a/bio10.html
+++ b/bio10.html
@@ -39,7 +39,7 @@
    <h1> (١٨ سبتمبر / ٧ توت)  </h1>
    <h1> Saint Refka and her Five Children </h1>
    <h1>  (18 Sept / 7 Tout) </h1> 
-<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Refka.png" alt="Refka">
+<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Refka.jpg" alt="Refka">
     
 <p style="text-align: left; font-size: 18px;">
 More has been written about this holy pope after his death, in various languages, than was written about him during his lifetime. Many, especially in Egypt , Sudan, Ethiopia , Lebanon, and Syria, knew him as a man of God, a man of prayer with a gift for performing miracles.
