--- a/bio1.html
+++ b/bio1.html
@@ -79,14 +79,15 @@
   <p style="text-align: left; font-size: 18px;">
     <strong>His Martyrdom</strong> Fearing rebellion due to the many miracles through George, the emperor finally ordered his beheading. Saint George was martyred on the 23rd of Baramouda in the Coptic calendar.
   </p>
-<p style="text-align: left; font-size: 18px;">
+    
+<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
 <span dir="rtl">
 تم العثور على رفاتهم أثناء عمل مشروع لدير الملاك غبريال بالفيوم في الجزء القبلي منه في يوم 28 يوليو 1991 م. وأثناء الحفر وُجِدَت هذه الأجساد ، وكانت ملابسها مُغطاة بالصلبان..   وتم فحصهم بيد نيافة الأنبا ابرآم أسقف الفيوم ورئيس الدير، فَوُجِدَ معهم الزى الرهباني؛ وبالتحديد المنطقة الجلد التي يستخدمها الراهب، وكانت مُقَسَّمة إلى قطع لمرور الزمن عليها.  وهؤلاء الأجساد خاصة بآبائنا الرهبان الذين عاشوا في القرون الماضية بهذه البرية، ووُجِدَ يوم 25 أغسطس 1991 م. صناديق قديمة من شرائح النخيل، وُجِدَ في أحداها جسدين: أحداهما برأس به تشوهات ومتفحم وبيده حلقات، والآخر بدون رأس، وهذا دليل على أنهم رهبان شهداء.  وهم الآن في صناديق صُنِعَت خصيصاً لهم موضوعة على مقصورة بالدير.
 <br>
 ويوجد ضمن الشهداء طفل صغير وُجِدَ في يوم 1 سبتمبر 1991 م.  وهكذا صار هذا اليوم عيدًا لهم.  وقد نالت كنائس كثيرة في مصر والمهجر أجزاء من رفات هؤلاء الشهداء، وتقوم الكنيسة بالاحتفال بهم.
   </span>
 </p>
-<p style="text-align: left; font-size: 18px;">
+<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
 <span dir="rtl">
 <strong> المقابر في جبل النقلون        </strong>:
 <br>
@@ -150,4 +151,5 @@
   </div>
 </body>
 </html>
+
 
