--- a/bio1.html
+++ b/bio1.html
@@ -83,52 +83,52 @@
 <p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
 <span dir="rtl">
 تم العثور على رفاتهم أثناء عمل مشروع لدير الملاك غبريال بالفيوم في الجزء القبلي منه في يوم 28 يوليو 1991 م. وأثناء الحفر وُجِدَت هذه الأجساد ، وكانت ملابسها مُغطاة بالصلبان..   وتم فحصهم بيد نيافة الأنبا ابرآم أسقف الفيوم ورئيس الدير، فَوُجِدَ معهم الزى الرهباني؛ وبالتحديد المنطقة الجلد التي يستخدمها الراهب، وكانت مُقَسَّمة إلى قطع لمرور الزمن عليها.  وهؤلاء الأجساد خاصة بآبائنا الرهبان الذين عاشوا في القرون الماضية بهذه البرية، ووُجِدَ يوم 25 أغسطس 1991 م. صناديق قديمة من شرائح النخيل، وُجِدَ في أحداها جسدين: أحداهما برأس به تشوهات ومتفحم وبيده حلقات، والآخر بدون رأس، وهذا دليل على أنهم رهبان شهداء.  وهم الآن في صناديق صُنِعَت خصيصاً لهم موضوعة على مقصورة بالدير.
-<br>
+<br> <br>
 ويوجد ضمن الشهداء طفل صغير وُجِدَ في يوم 1 سبتمبر 1991 م.  وهكذا صار هذا اليوم عيدًا لهم.  وقد نالت كنائس كثيرة في مصر والمهجر أجزاء من رفات هؤلاء الشهداء، وتقوم الكنيسة بالاحتفال بهم.
   </span>
 </p>
 <p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
 <span dir="rtl">
 <strong> المقابر في جبل النقلون        </strong>:
-<br>
+<br><br>
 قام البروفيسور د. جودلوفسكي Dr. W. Godlewski مع بعض المتخصصين في عِلم الآثار Archaeology وكذلك عِلم البشريات Anthropology (ومنهم كارول بياسكي Karol Piasecki وتساعدها إليوابث رابوسكا Elizabic Dabrowska على عمل دراسة لأعمال الحَفْر المُكْتَشَفة حديثًا، بالإضافة إلى الآثار المُكْتَشَفة عاميّ 1997، 1998.  وقد تم اكتشاف 134 مقبرة في المنطقة الغربية من الكنيسة الأثرية، والعدد الكلي للمدفونين 234 شخصًا، ويُرَجَّح أن عدد المدفونين أكثر من هذا؛ حيث أن المنطقة الشرقية والجنوبية لم يتم اكتشافها بعد.
-<br>
+<br><br>
 هناك عدد قليل من المقابر تحتوي على كتلة صخرية كبيرة مازالت موجودة: ثلاثة منهم (مقبرة رقم 150-143-133)، وهي موجودة في الجزء الغربي من الممر الرئيسي، والذي يقع قريبًا جدًا من الآثار المُكْتَشَفة في عام 1998، وبالقرب من الناحية الشمالية الغربية للكنيسة، ولم ينقب أحد حتى تاريخ كتابة هذا الكلام عنها هنا في موقع موقع الأنبا تكلاهيمانوت.
-<br>
+<br><br>
 وفي الناحية الجنوبي للصرف الصحي هناك مكان أثري مستطيل، وبه ثلاثة جثث (جثة لطفل واثنان من الرجال البالغين)، وقد تم اكتشافهم تحت صخرة كبيرة مساحتها 110×80 سم. ليس من الواضِح هل كان الطفل يعيش في نفس عصر الرجلين الآخرين؟  وذلك لأن كفن الطفل مصنوع من زعف النخيل المنسوج، والغطاء من قماش الصوف المزين بالصليب الأحمر، مع زركشة على الجانبين، وكِتابة باللغة العربية.  وجثة الطفل مُغطاة بقطعة من الصوف، وصليب من العظم حول رقبته.
-<br>
+<br><br>
 أحد الرجال البالغين مدفونين في زعف التخيل، وهناك صليب من خشب يدعم زعف النخيل ومبروطٌ به، والغطاء عبارة عن ملاءة وملفوفة بقطعة من الصوف، وبها بعض الكِتابات باللغة العربية، وهناك قارورتان موضوعتان في وسط الكفن مع الميت.
-<br>
+<br><br>
 الرجل الثاني مدفون في نفس الملاءة ولكن بدون كفن لحسده ملفوف بزعف النخيل، ورأسه مستندة على حجر، وحول وسطه حزام جلد، وحول رقبته صليب معدني، وعلى صدره ملفوف قطعة من الجلد بها صلبان محفوظ جزء كبير منها كما هي.
-<br>
+<br><br>
 معظم المدفونين المُكْتَشَفين في عام 2000 م. وفي الأعوام السابقة غير محفوظين بالكامل.  والصليب الخشب الكبير الموجود على المقبرة رقم 165 ومحفور عليه كِتابة باللغة اليونانية، يُرَجَّح أنه مقبرة لأحد الكهنة (ويُدعى بطرس)، وأغلب الظن أن الصليب الكبير الموجود على المدفن أُحْضِر من موضِع آخر.
-<br>
+<br><br>
 إن جثث الأموات عمومًا داخل صندوق من الخشب، ونادِرًا ما تكون الجثث ملفوفة في ملاءة فقط وموضوعة داخل حفرة في الدبش بجوار المبنى الرهباني أو تحت بعض الحوائط المهدمة وغير مرئية وغير واضحة على السطح.
-<br>
+<br><br>
 والشيء المُلْفِت للنظر هو كفن المرأة في المقبرة الرابعة رقم 137، وهو أكثر الأكفان المُزَرْكَشة والمُكْتَشَفة حتى الآن.  وبه جوانب من الحرير والكتابة باللغة العربية على الجانبين.  وبالتحليل عُرِفَ أن تاريخه يرجع إلى النصف الثاني من القرن الثاني عشر.
-<br>
+<br><br>
 وكذلك من الأشياء المُلْفِتة للنظر وجود صليبين من العاج مدفونين مع المرأة، واحد مُعَلَّق حول رقبتها، والآخر في يديها.  وهناك قنينة صغيرة موجودة مع الأكفان، وبقايا لنباتات عِطرية بجانب رأس المرأة.
-<br>
+<br><br>
 هناك أحد البالغين وأحد الأطفال مدفونين في نفس المكان.  الطفل ملفوف بملاءة وموضوع في نفس الكفن مع العِظام، الذي يُرَجَّح إما أن تكون عِظام رجل أو امرأة.
-<br>
+<br><br>
 وفي المقبرة رقم 179 هناك جسد لامرأة مع طفل موضوع في قارورة كبيرة، وبجانب جثة المرأة يوجد نوعان من القماش حول الرأس، وهما مُزَرْكَشَتان للغاية، وبها حافة من الحرير، وبعض الكتابات باللغة العربية حول الأحرف الخارجية للقماش.  وهناك بعض القصاصات من الحرير أو الصوف من الطراز الفاطمي وُجِدَ في حوالي 12 مقبرة.
   </span>
 </p>
 <p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
 <span dir="rtl">
-<strong> الجماجِم في جبل النقلون   </strong>:
-<br>
+<strong> الجماجِم في جبل النقلون:   </strong>
+<br><br>
 قامَت عالِمة الآثار كارول بيساكي بمساعدة عِلم البشريات بفحص الجماجم المُكْتَشَفة في مقابر جبل النقلون عام 1991 م.، ومن خلال الفحص تَبَيَّن أن هذه المقابر قد استُخْدِمَت من قِبَل الأقباط في واحدة الفيوم، وعلى أغلب الظن أنها مقابر تابِعة لإيبارشية الفيوم.
-<br>
+<br><br>
 كان الموتى عادةً يُدْفَنون بكفن مصنوع من سعف النخيل أو من جِزع النخيل، وَيُجْمَع سويًا إما ببعض الأوتار الخشبية أو المسامير الحديدية .بعض هذه الأكفان مفتوحة، بحيث يمكن رؤية جمجمة الميت، والبعض الآخر مُغَطَّى بملاءة صوف بيضاء وبها الصلبان الحمراء.
-<br>
+<br><br>
 ولأن معظم الأجساد ملفوفة بملاءة، فإن هذا هذا حافَظ على الأنسجة الرخوة مثل الجلد والشعر والأوتار والعضلات كما هي، وهذا يرجع إلى مناخ الصحراء (ملوحة التربة وجفافها) .وهناك ظاهرة أخرى في الأجساد المدفونة والقريبة من سطح الأرض، وهي تراكم طبقة الملح والمواد الجيرية على العِظام، مُكَوِّنة طبقة 2 سم. تقريبًا، تارِكةً جسم الميت مُسَطَّح وأملس.
   </span>
 </p>
 <p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
 <span dir="rtl">
-<strong> المقبرة الجماعية أرقام 216-217-218 >  </strong>
-<br>
+<strong> المقبرة الجماعية أرقام 216-217-218:  </strong>
+<br><br>
 من الشيء المثير للعجب في المقابر الجماعية هذه ثلاثة رجال وُجِدوا ملفوفين بشدة مع بعضهم بملاءة واحدة، وكانت المقبرة متجهة من الشمال إلى الجنوب على حسب العادات المسيحية.  وبالتحليل الدقيق وُجِدَ أنهم ماتوا باستخدام أساليب العنف، والدليل على ذلك هو وجود أثار كَسْر في عِظام الجماجم باستخدام آلات حادة، وكذلك بعض الكسور في العمود الفقري.  وأغلب الظن أن هؤلاء الثلاثة هم شباب ما بين 20-30 سنة، وبصحة جيدة..  ومن التحليل اتضح أن المجني عليهم ركعوا على ركبهم، ورُبِطوا إلى عمود، وعُذِّبوا على هذا الوضع قبل الوفاة.
   </span>
 </p>
@@ -136,13 +136,13 @@
 <span dir="rtl">
 
 <strong> آثار شهداء الفيوم بالإيبارشية: </strong>
- <br>
+ <br><br>
 هناك العديد من الآثار المتعلقة بهذه المقابر بالإيبارشية -وذلك بالطبع بخلاف الرفات والأجساد ذاتها- منها:-
-<br>
+<br><br>
 - أجزاء من ملابس الشهداء بزخارف وألوان متنوعة
-<br>
+<br><br>
 - ملاءات الدفن..
-<br>
+<br><br>
 - بعض أدوات التعذيب أو الحَبْس من قيود حديدية وغيره
   </span>
 </p>
@@ -151,5 +151,6 @@
   </div>
 </body>
 </html>
+
 
 
