--- a/bio1.html
+++ b/bio1.html
@@ -138,12 +138,12 @@
 <strong> آثار شهداء الفيوم بالإيبارشية: </strong>
  <br>
 هناك العديد من الآثار المتعلقة بهذه المقابر بالإيبارشية -وذلك بالطبع بخلاف الرفات والأجساد ذاتها- منها:-
-<br><br>
-- أجزاء من ملابس الشهداء بزخارف وألوان متنوعة
-<br><br>
-- ملاءات الدفن..
-<br><br>
-- بعض أدوات التعذيب أو الحَبْس من قيود حديدية وغيره
+<br>
+- أجزاء من ملابس الشهداء بزخارف وألوان متنوعة.
+<br>
+- ملاءات الدفن.
+<br>
+- بعض أدوات التعذيب أو الحَبْس من قيود حديدية وغيره.
   </span>
 </p>
     
@@ -151,6 +151,7 @@
   </div>
 </body>
 </html>
+
 
 
 
