--- a/bio1.html
+++ b/bio1.html
@@ -49,7 +49,7 @@
     Among the martyrs was also a young child, discovered on September 1, 1991. Thus, this day became their feast. Many churches in Egypt and abroad received relics of these martyrs, and the Church celebrates them.
   </p>
 
-  <h2>Tombs in Gebel al-Naqlun (1):-</h2>
+  <h2>Tombs in Gebel al-Naqlun:-</h2>
   <p>
     Professor Dr. W. Godlewski, along with specialists in Archaeology and Anthropology (including Karol Piasecki and assisted by Elizabic Dabrowska), conducted a study of the newly discovered excavations, in addition to findings from 1997 and 1998. A total of 134 tombs were discovered in the western area of the ancient church, containing 234 individuals. It is assumed that the total number of buried individuals is higher, as the eastern and southern areas have not yet been excavated.
   </p>
@@ -141,7 +141,7 @@
     ويوجد ضمن الشهداء طفل صغير وُجِدَ في يوم 1 سبتمبر 1991 م. وهكذا صار هذا اليوم عيدًا لهم. وقد نالت كنائس كثيرة في مصر والمهجر أجزاء من رفات هؤلاء الشهداء، وتقوم الكنيسة بالاحتفال بهم.
   </p>
 
-  <h2>المقابر في جبل النقلون(1):-</h2>
+  <h2>المقابر في جبل النقلون:-</h2>
   <p>
     قام البروفيسور د. جودلوفسكي Dr. W. Godlewski مع بعض المتخصصين في عِلم الآثار Archaeology وكذلك عِلم البشريات Anthropology (ومنهم كارول بياسكي Karol Piasecki وتساعدها إليوابث رابوسكا Elizabic Dabrowska على عمل دراسة لأعمال الحَفْر المُكْتَشَفة حديثًا، بالإضافة إلى الآثار المُكْتَشَفة عاميّ 1997، 1998. وقد تم اكتشاف 134 مقبرة في المنطقة الغربية من الكنيسة الأثرية، والعدد الكلي للمدفونين 234 شخصًا، ويُرَجَّح أن عدد المدفونين أكثر من هذا؛ حيث أن المنطقة الشرقية والجنوبية لم يتم اكتشافها بعد.
   </p>
@@ -229,6 +229,7 @@
   </div>
 </body>
 </html>
+
 
 
 
